--- a/.github/workflows/restyled.yml
+++ b/.github/workflows/restyled.yml
@@ -3,7 +3,8 @@
 name: Restyled
 
 on:
-  pull_request:
+  push:
+    branches: ["trunk"]
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
