--- a/.github/workflows/restyled.yml
+++ b/.github/workflows/restyled.yml
@@ -3,8 +3,7 @@
 name: Restyled
 
 on:
-  push:
-    branches: ["trunk"]
+  pull_request:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
