Finished problem 2 of week 5

--- a/W5/problem_2/src/main/resources/application.yml
+++ b/W5/problem_2/src/main/resources/application.yml
@@ -1,7 +1,6 @@
 datasource:
-	   db:
-	      username:
-	      password:
-	      databaseUrl: jdbc:sqlite:university.db
-	      databaseDriver: org.xerial.sqlite-jdbc
-	      	      
+	   an_sqlite_database:
+	      username: s4075654
+	      password: G2#duonglong
+	      url: jdbc:sqlite:university.db
+	      driver: org.sqlite.JDBC
