--- a/W5/problem_2/pom.xml
+++ b/W5/problem_2/pom.xml
@@ -8,8 +8,8 @@
   <version>1.0-SNAPSHOT</version>
 
   <properties>
-    <maven.compiler.source>18</maven.compiler.source>
-    <maven.compiler.target>18</maven.compiler.target>
+    <maven.compiler.source>23</maven.compiler.source>
+    <maven.compiler.target>23</maven.compiler.target>
   </properties>
 
   <dependencies>
@@ -23,6 +23,11 @@
       <artifactId>ebean-sqlite</artifactId>
       <version>15.8.0</version>
     </dependency>
+    <dependency>
+      <groupId>jakarta.validation</groupId>
+      <artifactId>jakarta.validation-api</artifactId>
+      <version>3.1.0</version>
+    </dependency>
   </dependencies>
 
   <build>
@@ -30,7 +35,7 @@
       <plugin>
 	<groupId>io.ebean</groupId>
 	<artifactId>ebean-maven-plugin</artifactId>
-	<version>12.1.15</version>
+	<version>15.8.0</version>
 	<executions>
 	  <execution>
 	    <id>main</id>
@@ -48,7 +53,7 @@
       <plugin>
 	<groupId>org.codehaus.mojo</groupId>
 	<artifactId>exec-maven-plugin</artifactId>
-	<version>1.3.2</version>
+	<version>3.5.0</version>
 	<configuration>
 	  <mainClass>a_java_program_that_reads_and_displays_student_records_stored_in_an_sqlite_database.Problem2</mainClass>
 	</configuration>
