Updated Assignment 1's origin

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "assignment_1"]
 	path = assignment_1
-	url = https://github.com/s4075654/COSC2440-COSC2731_Assignment_1
+	url = https://github.com/RMIT-Vietnam-Teaching/further-programming-assignment-1-build-a-console-app-s4075654.git
