--- a/W5/problem_1/pom.xml
+++ b/W5/problem_1/pom.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>a_maven_project.your_application</groupId>
-	<artifactId>problem-1</artifactId>
+	<groupId>w5.a_maven_project</groupId>
+	<artifactId>your-application</artifactId>
 	<name>HelloSimulator</name>
 	<description>Simple Hello World simulator</description>
 	<version>1.0-SNAPSHOT</version>
@@ -15,12 +15,12 @@
 		<dependency>
 			<groupId>com.massisframework.massis</groupId>
 			<artifactId>massis-core</artifactId>
-			<version>1.2.18</version>
+			<version>1.2.22</version>
 		</dependency>
 		<dependency>
 			<groupId>com.massisframework.massis</groupId>
 			<artifactId>testdata</artifactId>
-			<version>1.2.18</version>
+			<version>1.2.22</version>
 			<exclusions>
 				    <exclusion>
 				    	       <groupId>com.sun</groupId>
