--- a/W5/problem_3/pom.xml
+++ b/W5/problem_3/pom.xml
@@ -3,8 +3,8 @@
 	 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>allowing_users_to_enter_a_string_and_display_the_students_whose_names_match_the_provided_input</groupId>
-  <artifactId>problem-3</artifactId>
+  <groupId>w5.problem_3</groupId>
+  <artifactId>extend-problem-2</artifactId>
   <version>1.0-SNAPSHOT</version>
 
   <properties>
@@ -14,9 +14,22 @@
 
   <dependencies>
     <dependency>
-      <groupId>a_java_program_that_reads_and_displays_student_records_stored_in_an_sqlite_database</groupId>
-      <artifactId>problem-2</artifactId>
+      <groupId>w5</groupId>
+      <artifactId>a-java-program-that-reads-and-displays-student-records-stored-in-an-sqlite-database</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+	<groupId>org.codehaus.mojo</groupId>
+	<artifactId>exec-maven-plugin</artifactId>
+	<version>3.5.0</version>
+	<configuration>
+	  <mainClass>AllowingUsersToEnterAStringAndDisplayTheStudentsWhoseNamesMatchTheProvidedInput</mainClass>
+	</configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
