--- a/w6/pom.xml
+++ b/w6/pom.xml
@@ -3,8 +3,8 @@
 	 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>w5.problem_3</groupId>
-  <artifactId>extend-problem-2</artifactId>
+  <groupId>w6</groupId>
+  <artifactId>exercise</artifactId>
   <version>1.0-SNAPSHOT</version>
 
   <properties>
@@ -14,9 +14,9 @@
 
   <dependencies>
     <dependency>
-      <groupId>w5</groupId>
-      <artifactId>a-java-program-that-reads-and-displays-student-records-stored-in-an-sqlite-database</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.8</version>
     </dependency>
   </dependencies>
 
@@ -27,7 +27,7 @@
 	<artifactId>exec-maven-plugin</artifactId>
 	<version>3.5.0</version>
 	<configuration>
-	  <mainClass>AllowingUsersToEnterAStringAndDisplayTheStudentsWhoseNamesMatchTheProvidedInput</mainClass>
+	  <mainClass>StudentManagementApp</mainClass>
 	</configuration>
       </plugin>
     </plugins>
