--- a/W5/problem_1/pom.xml
+++ b/W5/problem_1/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>w5.a_maven_project</groupId>
+	<groupId>w5.amavenproject</groupId>
 	<artifactId>your-application</artifactId>
 	<name>HelloSimulator</name>
 	<description>Simple Hello World simulator</description>
