--- a/W5/problem_1/pom.xml
+++ b/W5/problem_1/pom.xml
@@ -1,32 +1,20 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>w5.amavenproject</groupId>
-	<artifactId>your-application</artifactId>
-	<name>HelloSimulator</name>
-	<description>Simple Hello World simulator</description>
-	<version>1.0-SNAPSHOT</version>
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.source>18</maven.compiler.source>
-		<maven.compiler.target>18</maven.compiler.target>
-	</properties>
-	<dependencies>
-		<dependency>
-			<groupId>com.massisframework.massis</groupId>
-			<artifactId>massis-core</artifactId>
-			<version>1.2.22</version>
-		</dependency>
-		<dependency>
-			<groupId>com.massisframework.massis</groupId>
-			<artifactId>testdata</artifactId>
-			<version>1.2.22</version>
-			<exclusions>
-				    <exclusion>
-				    	       <groupId>com.sun</groupId>
-					       <artifactId>tools</artifactId>
-				    </exclusion>
-			</exclusions>
-		</dependency>
-	</dependencies>
+<project>
+  <modelVersion>4.0.0</modelVersion>
+  
+  <groupId>problem1</groupId>
+  <artifactId>a-maven-project</artifactId>
+  <version>1</version>
+
+  <build>
+    <plugins>
+      <plugin>
+	<groupId>org.codehaus.mojo</groupId>
+	<artifactId>exec-maven-plugin</artifactId>
+	<version>3.5.0</version>
+	<configuration>
+	  <mainClass>YourApplication</mainClass>
+	</configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
