--- a/W5/problem_3/pom.xml
+++ b/W5/problem_3/pom.xml
@@ -1,22 +1,20 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project>
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>w5.problem_3</groupId>
+  <groupId>problem3</groupId>
   <artifactId>extend-problem-2</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1</version>
 
-  <properties>
-    <maven.compiler.source>21</maven.compiler.source>
-    <maven.compiler.target>21</maven.compiler.target>
-  </properties>
+  <!--<properties>
+    <maven.compiler.source>18</maven.compiler.source>
+    <maven.compiler.target>18</maven.compiler.target>
+  </properties>-->
 
   <dependencies>
     <dependency>
-      <groupId>w5</groupId>
+      <groupId>problem2</groupId>
       <artifactId>a-java-program-that-reads-and-displays-student-records-stored-in-an-sqlite-database</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>1</version>
     </dependency>
   </dependencies>
 
