On branch trunk 	modified:   W5/problem_4/pom.xml 	modified:   ass_1 	modified:   lab_test_(sample)/pom.xml 	modified:   w6/pom.xml 	modified:   w7/1/pom.xml 	modified:   w7/2/pom.xml 	modified:   w7/3/pom.xml 	modified:   w7/extra/4/pom.xml 	modified:   w7/extra/5/pom.xml 	modified:   w7/extra/6/pom.xml 	modified:   w7/extra/7/pom.xml 	modified:   w8/problem_4/pom.xml 	modified:   w8/problem_4/src/test/java/Problem4.java Removed all unecessary pom.xml components.

--- a/lab_test_(sample)/pom.xml
+++ b/lab_test_(sample)/pom.xml
@@ -1,16 +1,14 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project>
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>final</groupId>
   <artifactId>programming</artifactId>
   <version>40 marks</version>
 
-  <properties>
+  <!--<properties>
     <maven.compiler.source>21</maven.compiler.source>
     <maven.compiler.target>21</maven.compiler.target>
-  </properties>
+  </properties>-->
 
   <repositories>
     <repository>
@@ -42,17 +40,4 @@
       <scope>provided</scope>
     </dependency>
   </dependencies>
-
-  <build>
-    <plugins>
-      <plugin>
-	<groupId>org.codehaus.mojo</groupId>
-	<artifactId>exec-maven-plugin</artifactId>
-	<version>3.5.0</version>
-	<configuration>
-	  <mainClass></mainClass>
-	</configuration>
-      </plugin>
-    </plugins>
-  </build>
 </project>
