--- a/W5/problem_4/pom.xml
+++ b/W5/problem_4/pom.xml
@@ -1,9 +1,7 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project>
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>w5</groupId>
   <artifactId>a-java-jpa-program-that-persists-student-objects</artifactId>
-
-  <properties>
+  <version></version>
+</project>
