--- a/w5/extra_(files_&_streams)/problem_1/pom.xml
+++ b/w5/extra_(files_&_streams)/problem_1/pom.xml
@@ -1,15 +1,15 @@
 <project>
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>w6</groupId>
-  <artifactId>exercise</artifactId>
+  <groupId>extra.problem1</groupId>
+  <artifactId>a-java-program-that-asks-the-user-to-enter-a-text-file-name</artifactId>
   <version>1</version>
 
   <dependencies>
     <dependency>
-      <groupId>com.google.code.gson</groupId>
-      <artifactId>gson</artifactId>
-      <version>2.8.9</version>
+      <groupId>com.github.kwhat</groupId>
+      <artifactId>jnativehook</artifactId>
+      <version>2.2.2</version>
     </dependency>
   </dependencies>
 
@@ -20,7 +20,7 @@
 	<artifactId>exec-maven-plugin</artifactId>
 	<version>3.5.0</version>
 	<configuration>
-	  <mainClass>StudentManagementApp</mainClass>
+	  <mainClass>JavaProgramThatAsksTheUserToEnterATextFileName</mainClass>
 	</configuration>
       </plugin>
     </plugins>
